--- a/css/index.css
+++ b/css/index.css
@@ -1,52 +1,3 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-
 * {
     box-sizing: border-box;
 }
@@ -66,9 +17,47 @@ p {
     line-height: 1.4;
 }
 
+.header {
+    width: 800px;
+    margin: 0 auto;
+    display: flex;
+    padding-bottom: 30px;
+    padding-top: 30px;
+}
+
+.header nav {
+    width: 600px;
+    display: flex;
+    justify-content: center;
+    justify-content: space-evenly;
+    padding-left: 20px;
+}
+
+.header nav a {
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    text-decoration: none;
+    width: 100px;
+    color: black;
+    font-family: 'Roboto', sans-serif;
+}
+
+.header nav a:hover {
+    background: black;
+    color: white;
+}
+
+.header-image {
+    width: 800px;
+    margin: 0 auto;
+    margin-bottom: 20px;
+}
+
 .container {
     width: 800px;
     margin: 0 auto;
+    border: 1px solid black;
 }
 
 .top-content {
